. `Alpha` 内部测试版本，很早期的测试版本，未经过内部测试，可能存在较多Bugs，此版本类似技术预览版（Technical Preview），切 *不可* 用于生产环境！
. `SNAPSHOT` 快照版本，类似Nightly版本，更新频繁此不保证质量，切 *不可* 用于生产环境！
====

==== 发行记录

===== 2.0.0-RC(准备中)

.Features

* 升级到Spring Boot 2.x
* 实现兼容Spring Cloud与Istio的部署、监控架构
* 引入DevOps流程
* 独立通知功能到``notification``
* 支持kafka、MQTT的MQ实现
* 支持多个Redis连接 <<framework-user-manual-cluster-redis-mutli-connection>>

.Improvement

* 核心模块通过``checkstyle``检查
* ``dew-jdbc`` 被移除，请直接使用其它数据库管理工具
* ``cluster-spi-eureka`` 被移除，请用 ``cluster-spi-redis`` 代替其集群选举功能
* 权限认证Token处理优化 <<framework-user-manual-auth>>

.迁移指南见 <<dew-2-migration-guide>>

===== 1.5.1-RC

.Improvement

* 升级 ``dew-common`` 允许请求与响应编码不同

.Fixed

* 修复 ``Dew.Util.getRealIP`` 错误

===== 1.5.0-RC

.Features

* 使用小泰科技Fork版本做为开源版本
* 添加领导者选举的Redis实现
* 添加消息通知（钉钉或邮件）
* 添加生成系统级（多服务）统一离线文档功能
* 添加MQ消费的HA功能
* 默认使用micrometer做为指标采集工具
* 添加对Scala的支持

.Improvement

* 分布式锁中删除lock、lockWithFun操作
* 分布式锁由可重入改为不可重入
* redis增加hash incr操作 和 hash decr操作
* 增加swagger-bootstrap-ui，优化swaggerUI的显示
* spring-boot升级至1.5.13.RELEASE版本
* spring-cloud升级到Edgware.SR4版本
* dew-common升级到1.4.7版本
* boot-starter默认启用HTTP服务
* 移除ShardingJDBC的内容
* 移除服务脚手架功能
* 移除mybatis-starter模块
* 暂时移除Dew JDBC模块

.Fixed

* 修复指标采集内存溢出问题

.迁移指南（从1.3.4-RC到此版本）

* 配置变更： 拆分``dew.cluster.dist`` 为 ``dew.cluster.lock``和``dew.cluster.map``
* 配置变更： ``dew.cluster.election.config.election-period-sec`` to ``dew.cluster.config.election-period-sec``
* 功能变更： 领导者选举、分布式锁、分布式Map的实例化方式由 ``dew.cluster.election/lock/map`` 修改成 ``dew.cluster.election/lock/map.instance(...)``
* 功能变更： 领导者选举``isLeader``接口需要等待选举产生后再返回（之前逻辑是每次启动时会设置成false再执行选举）
* 功能变更： 相同``Dew.Info.instance``的实例在选举过期周期内重启任能保持原先状态
* 功能变更： 移除服务脚手架，需要手工添加需要的接口服务
* 功能变更： 移除mybatis-starter模块，请使用mybatis官方方案
* 功能变更： swagger-ui.html 变更成 doc.html
* 功能变更： ``Dew.Info.instance``由``UUID``修改成``服务名@Profile@IP:端口``
* 功能变更： 升级后的Tomcat版本不支持Host中带有'_'这种非规范符号

===== 1.3.4-RC

.Features

* rabbitmq 增加topic exchange

===== 1.3.2-RC

.Features

* 去掉logback-es依赖，使用logstash从日志文件进行采集

===== 1.3.1-RC
