@@ -1,0 +1,56 @@
+/*
+ * Copyright 2019. the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package ms.dew.core.web.interceptor;
+
+import com.fasterxml.jackson.core.JsonParser;
+import com.fasterxml.jackson.databind.DeserializationContext;
+import com.fasterxml.jackson.databind.deser.std.StdScalarDeserializer;
+import com.fasterxml.jackson.databind.module.SimpleModule;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.util.StringUtils;
+
+import java.io.IOException;
+
+/**
+ * 自动去掉请求中字符串类型的前后空格.
+ *
+ * @author gudaoxuri
+ */
+@Configuration
+@ConditionalOnProperty(prefix = "dew.basic.format", name = "auto-trim-from-req", havingValue = "true")
+public class AutoTrimConfiguration extends SimpleModule {
+
+    /**
+     * Instantiates a new Auto trim configuration.
+     */
+    public AutoTrimConfiguration() {
+        addDeserializer(String.class, new StdScalarDeserializer<String>(String.class) {
+            @Override
+            public String deserialize(JsonParser jsonParser, DeserializationContext ctx) throws IOException {
+                String value = jsonParser.getValueAsString();
+                if (StringUtils.isEmpty(value)) {
+                    return value;
+                }
+                return value.trim();
+            }
+        });
+    }
+
+}
+
+
