@@ -3,6 +3,7 @@ org.springframework.boot.autoconfigure.EnableAutoConfiguration=\
   ms.dew.Dew,\
   ms.dew.core.web.error.ErrorAutoConfiguration,\
   ms.dew.core.web.interceptor.InterceptorWebAutoConfiguration,\
+  ms.dew.core.web.interceptor.AutoTrimConfiguration,\
   ms.dew.core.basic.utils.convert.ConvertAutoConfiguration,\
   ms.dew.core.auth.AuthAutoConfiguration,\
   ms.dew.core.doc.DocAutoConfiguration
